# CodeKataTemplates

./: .gitignore  README.md
bash/: codekata.bats  codekata.sh
cpp/: .gitignore  CMakeLists.txt
cpp/src/: CMakeLists.txt  CodeKata.cpp
cpp/src/include/: CodeKata.h
cpp/test/: CMakeLists.txt  CodeKataTest.cpp
dotnet/: .gitignore  README.md  dotnet.sln
dotnet/Kata/: KataService.cs
dotnet/Kata.Tests/: Kata.Tests.csproj  KataService_IsPrimeShould.cs
go/: README.md  kata.go  kata_test.go
haskell/: CodeKata.hs  CodeKataSpec.hs  README.md
java/: pom.xml
java/src/main/java/com/github/knifeofdreams/codekata/: CodeKata.java
java/src/test/java/com/github/knifeofdreams/codekata/: CodeKataTest.java
javascript/: README.md  kata.js  kata.spec.js  package.json
kotlin/: build.gradle.kts  settings.gradle
kotlin/src/main/kotlin/com/github/knifeofdreams/codekata/kotlin/: CodeKata.kt
kotlin/src/test/kotlin/com/github/knifeofdreams/codekata/kotlin/: CodeKataTest.kt
python/: README.md  kata.py  kata_test.py
ruby/: Gemfile  README.md  kata.rb  kata_spec.rb
rust/: Cargo.toml
rust/src/: lib.rs
scala/: README.md  build.sbt
scala/src/main/scala/example/: Greeter.scala
scala/src/test/scala/example/: GreeterSpec.scala
ts/: jest.config.js  package-lock.json  package.json
ts/src/: kata.test.ts  kata.ts
