set(CATCH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/catch/include)
add_library(Catch2::Catch INTERFACE IMPORTED)
target_include_directories(Catch2::Catch INTERFACE "${CATCH_INCLUDE_DIR}")

add_executable(CodeKataTest CatchMain.cpp CodeKataTest.cpp)
target_include_directories(CodeKataTest PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
target_include_directories(CodeKataTest PRIVATE $<TARGET_PROPERTY:CodeKata,INCLUDE_DIRECTORIES>)
target_link_libraries(CodeKataTest PRIVATE CodeKata)
target_link_libraries(CodeKataTest PRIVATE Catch2::Catch)
add_test(NAME CodeKataTest COMMAND CodeKataTest)
